# Amadeus-2.0

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini  requirements.txt
backend/: .env  0001_initial,  __init__.py  pyproject.toml  requirements.txt
backend/gateway/: __init__.py  alembic.ini
backend/gateway/alembic/: README  env.py  script.py.mako
backend/gateway/app/: __init__.py  audit.py  bruteforce.py  captcha.py  config.py  crypto.py  data_service.py  db.py  dependencies.py  email.py  jwks.py  logging.py  main.py  models.py  nautilus_engine_service.py  nautilus_service.py  persistence.py  security.py  settings.py  state_sync.py  storage.py  strategy_tester.py  token_service.py
backend/gateway/config/: .env.example  __init__.py  settings.py
backend/gateway/db/: __init__.py  base.py  models.py  session.py
backend/gateway/scripts/: apply_migrations.py  seed_admin.py
backend/gateway/tests/: conftest.py  test_admin_management.py  test_admin_user_management.py  test_api_keys_routes.py  test_audit_events.py  test_auth_flow.py  test_auth_rate_limit.py  test_auth_routes.py  test_auth_tokens.py  test_auth_user_management.py  test_bootstrap_admin.py  test_config_validation.py  test_cors_configuration.py  test_crypto.py  test_data_service.py  test_integrations_routes.py  test_jwks_async.py  test_keys_crud.py  test_logging_configuration.py  test_main_admin_authorization.py  test_market_routes.py  test_migration_citext.py  test_nautilus_integration.py  test_nodes_lifecycle.py  test_nodes_routes.py  test_oidc_discovery.py  utils.py  (+7 more)
(+264 files in other folders)
